--- a/css/style.css
+++ b/css/style.css
@@ -518,11 +518,12 @@ ul {
   border-radius: 50px;
   font-size: 30px;
   z-index: 100;
+  text-decoration: none;
   transition: .4s;
 }
 
 .my-float {
-  margin: auto;
+  display: flex;
 }
 
 .wa-right:hover {
